<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="medicalRecordViewModel"
            type="app.m.ophthalmicuser.medicalRecord.viewModels.MedicalRecordDetailsViewModels" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/customToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp8w">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:onClick="@{()-> medicalRecordViewModel.toBack()}"
                        android:src="@drawable/ic_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@{medicalRecordViewModel.reservationsResponse.time}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/tv_doctor_note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp12h"
                android:text="@string/medicalNote"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customToolBar" />

            <TextView
                android:id="@+id/tv_doctor_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp12h"
                android:hint="@string/noteHint"
                android:text="@{medicalRecordViewModel.reservationsResponse.note}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_doctor_note_title" />

            <TextView
                android:id="@+id/tv_doctor_medicine_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp12h"
                android:text="@string/medicalMedicine"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_doctor_note" />

            <TextView
                android:id="@+id/tv_doctor_medicine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp12h"
                android:hint="@string/medicineHint"
                android:text="@{medicalRecordViewModel.reservationsResponse.medicine}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_doctor_medicine_title" />

            <TextView
                android:id="@+id/tv_doctor_x_rays_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp12h"
                android:text="@string/medicalRays"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_doctor_medicine" />

            <TextView
                android:id="@+id/tv_doctor_x_rays"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp12h"
                android:hint="@string/xRaysHint"
                android:text="@{medicalRecordViewModel.rays.x_ray_name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_doctor_x_rays_title" />

            <ImageView
                android:layout_width="@dimen/dp150h"
                android:layout_height="@dimen/dp150h"
                android:layout_margin="@dimen/dp12h"
                android:src="@color/overlayBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_doctor_x_rays"
                app:rayImage="@{medicalRecordViewModel.rays.x_ray_image}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>