<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpViewModel"
            type="app.m.ophthalmicuser.profile.viewModels.ProfileViewModels" />
    </data>


    <ScrollView
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/customToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp8w">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/profile"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputUserName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp12h"
                android:layout_marginEnd="@dimen/dp15w"
                android:hint="@string/name"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/overlayBackground" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp12h"
                android:layout_marginEnd="@dimen/dp15w"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/overlayBackground" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp12h"
                android:layout_marginEnd="@dimen/dp15w"
                android:hint="@string/addressPhone"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/overlayBackground" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15w"
                android:layout_marginTop="@dimen/dp12h"
                android:layout_marginEnd="@dimen/dp15w"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/overlayBackground">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/overlayBackground" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--android:text="@={loginViewModel.loginRequest.password}"-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16h"
                android:background="@drawable/corner_view_primary_dark"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputUserName" />

        </LinearLayout>

    </ScrollView>


</layout>